# sensor-fusion

./: .gitmodules  CMakeLists.txt  README.md
src/DataCore/: CalibrationModule.h  DataCore.cpp  DataCore.h  DataCoreConfig.h  DataCoreConstants.h  DataCore_main.cpp  config.json
src/Drivers/: Dummy.h
src/FusionCore/: FusionCore.cpp  FusionCore.h  FusionCoreConfig.h  FusionCoreConstants.h  FusionCore_main.cpp
src/Utilities/: IMUSensorConfig.h  MatrixConfig.h  MultiSensor.h  Sensor.h  UniversalConstants.h
test/: DataCore_test.cpp
